@@ -1,6 +1,6 @@
 package com.uniovi.rag.services.tools.metadata;
 
-import com.uniovi.rag.model.Minute;
+import com.uniovi.rag.model.*;
 import com.uniovi.rag.services.retriever.ContextRetriever;
 import com.uniovi.rag.services.tools.ToolExecutionContext;
 import com.uniovi.rag.services.tools.ToolResult;
@@ -15,14 +15,6 @@ import java.util.stream.Collectors;
 
 /**
  * Enhanced MetadataCountAndExplainTool for counting and explaining meeting minutes with intelligent analysis.
- * 
- * Features:
- * - Intelligent explanation generation with context analysis
- * - Parallel processing for better performance
- * - Cached evaluations for efficiency
- * - Pattern analysis and clustering of explanations
- * - Quality ranking and synthesis of explanations
- * - Advanced NER-based filtering
  */
 public class MetadataCountAndExplainTool extends AbstractMetadataTool {
 
@@ -35,37 +27,39 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
         String query = ctx.query();
         JSONObject ner = ctx.nerEntities();
         
-        log().debug("Executing count and explain query: {} with NER: {}", query, ner != null ? ner.toString() : "null");
+        log().info("Executing count and explain query: {} with NER: {}", query, ner != null ? ner.toString() : "null");
         
-        // Step 1: Retrieve and filter documents efficiently
-        List<Document> docs = retrieveDocumentsWithMetadataFilter(
+        // Step 1: Retrieve and filter documents efficiently with fallback (using NER if available)
+        List<Document> docs = retrieveDocumentsWithFallback(
             query,
-            new String[] {"date", "place", "topics", "decisions", "summary", "agenda"}
+            new String[] {"date", "place", "topics", "decisions", "summary", "agenda"},
+            ner
         );
+        
         if (docs.isEmpty()) {
-            log().debug("No documents found for count and explain query: {}", query);
-            return ToolResult.from(generateNotFoundMessage(query), getClass());
+            log().info("No documents found for count and explain query: {}", query);
+            return ToolResult.from(formatResponse(generateNotFoundMessage(query), query), getClass());
         }
 
         // Step 2: Extract minutes in parallel
         List<Minute> minutes = extractMinutesInParallel(docs);
         if (minutes.isEmpty()) {
-            log().debug("No valid minutes found for count and explain query: {}", query);
-            return ToolResult.from(generateNotFoundMessage(query), getClass());
+            log().info("No valid minutes found for count and explain query: {}", query);
+            return ToolResult.from(formatResponse(generateNotFoundMessage(query), query), getClass());
         }
 
         // Step 3: Filter relevant minutes based on NER or query relevance
         List<Minute> relevantMinutes = filterRelevantMinutes(query, minutes, ner);
         if (relevantMinutes.isEmpty()) {
-            log().debug("No relevant minutes found for count and explain query: {}", query);
-            return ToolResult.from(generateNotFoundMessage(query), getClass());
+            log().info("No relevant minutes found for count and explain query: {}", query);
+            return ToolResult.from(formatResponse(generateNotFoundMessage(query), query), getClass());
         }
 
         // Step 4: Generate explanations in parallel
         List<Explanation> explanations = generateExplanationsInParallel(query, relevantMinutes);
         if (explanations.isEmpty()) {
-            log().debug("No explanations generated for query: {}", query);
-            return ToolResult.from(generateNotFoundMessage(query), getClass());
+            log().info("No explanations generated for query: {}", query);
+            return ToolResult.from(formatResponse(generateNotFoundMessage(query), query), getClass());
         }
 
         // Step 5: Analyze and rank explanations
@@ -76,82 +70,10 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
 
         // Step 7: Generate enhanced final answer
         String answer = generateEnhancedFinalAnswer(query, rankedExplanations, clusters);
-        log().debug("Generated count and explain answer for query: {} with {} explanations in {} clusters", 
+        log().info("Generated count and explain answer for query: {} with {} explanations in {} clusters", 
                    query, explanations.size(), clusters.size());
         
-        return ToolResult.from(answer, getClass());
-    }
-
-    /**
-     * Cached extraction of minute objects
-     */
-    @Cacheable(value = "minuteObjects", key = "#doc.id")
-    public Minute getMinuteFromMetadataCached(Document doc) {
-        return getMinuteFromMetadata(doc);
-    }
-
-    /**
-     * Cached NER matching evaluation
-     */
-    @Cacheable(value = "nerMatching", key = "#minute.hashCode() + '_' + #ner.hashCode()")
-    public boolean matchesMinuteWithNERCached(Minute minute, JSONObject ner) {
-        return matchesMinuteWithNER(minute, ner);
-    }
-
-    /**
-     * Cached query relevance evaluation for explanation queries
-     */
-    @Cacheable(value = "explanationQueryRelevance", key = "#query.hashCode() + '_' + #minute.hashCode()")
-    public boolean isRelevantToExplanationQueryCached(String query, Minute minute) {
-        return isRelevantToExplanationQueryByLLM(query, minute);
-    }
-
-    /**
-     * Determines if a minute is relevant to the explanation query using LLM.
-     */
-    private boolean isRelevantToExplanationQueryByLLM(String query, Minute minute) {
-        if (query == null || query.trim().isEmpty() || minute == null) {
-            return false;
-        }
-        
-        String prompt = generateExplanationRelevancePrompt(query, minute);
-        String result = getLLMResponseCached(prompt);
-        
-        if (result == null || result.trim().isEmpty()) {
-            log().warn("Empty response from LLM in isRelevantToExplanationQueryByLLM, defaulting to false");
-            return false;
-        }
-        
-        String normalized = result.toLowerCase();
-        return normalized.contains("yes") || normalized.contains("sí");
-    }
-
-    /**
-     * Generates adaptive relevance prompt for explanation queries
-     */
-    private String generateExplanationRelevancePrompt(String query, Minute minute) {
-        return String.format("""
-            Given the following explanation query (in any language):
-            "%s"
-            
-            Meeting metadata:
-            Date: %s
-            Place: %s
-            Topics: %s
-            Decisions: %s
-            Summary: %s
-            
-            Does this meeting contain information that could help explain or provide context for the query?
-            Consider that the query asks for explanations or detailed information.
-            Answer only with YES or NO.
-            """,
-            query,
-            minute.date() != null ? minute.date() : "unknown",
-            minute.place() != null ? minute.place() : "unknown",
-            minute.topics() != null ? String.join(", ", minute.topics()) : "unknown",
-            minute.decisions() != null ? String.join(", ", minute.decisions()) : "unknown",
-            minute.summary() != null ? minute.summary() : "unknown"
-        );
+        return ToolResult.from(formatResponse(answer, query), getClass());
     }
 
     /**
@@ -165,7 +87,7 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
         return futures.stream()
                 .map(CompletableFuture::join)
                 .filter(Objects::nonNull)
-                .filter(explanation -> !explanation.content.isBlank())
+                .filter(explanation -> explanation.getContent() != null && !explanation.getContent().isBlank())
                 .collect(Collectors.toList());
     }
 
@@ -177,11 +99,25 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
             return null;
         }
         
+        // Try metadata-first explanation to avoid LLM call when possible
+        String metadataExplanation = buildExplanationFromMetadata(minute);
+        if (metadataExplanation != null && !metadataExplanation.isBlank()) {
+            double relevanceScore = 0.6; // heuristic when built from metadata
+            return new Explanation(
+                minute.id(),
+                minute.date(),
+                minute.place(),
+                metadataExplanation,
+                relevanceScore,
+                System.currentTimeMillis()
+            );
+        }
+
         String prompt = generateEnhancedExplanationPrompt(query, minute);
         String content = getLLMResponseCached(prompt);
         
         if (content == null || content.trim().isEmpty()) {
-            log().debug("Empty response from LLM in generateExplanation, returning null");
+            log().info("Empty response from LLM in generateExplanation, returning null");
             return null;
         }
         
@@ -196,6 +132,30 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
             relevanceScore,
             System.currentTimeMillis()
         );
+    }
+
+    /**
+     * Builds a concise explanation using only metadata fields (no LLM).
+     */
+    private String buildExplanationFromMetadata(Minute minute) {
+        List<String> parts = new ArrayList<>();
+
+        if (minute.decisions() != null && !minute.decisions().isEmpty()) {
+            parts.add("Decisiones: " + String.join("; ", minute.decisions()));
+        }
+        if (minute.topics() != null && !minute.topics().isEmpty()) {
+            parts.add("Temas: " + String.join("; ", minute.topics()));
+        }
+        if (minute.summary() != null && !minute.summary().isBlank()) {
+            parts.add("Resumen: " + minute.summary());
+        }
+        if (minute.agenda() != null && !minute.agenda().isEmpty()) {
+            parts.add("Agenda: " + minute.agenda().toString());
+        }
+        if (parts.isEmpty()) {
+            return "";
+        }
+        return String.join(" | ", parts);
     }
 
     /**
@@ -289,7 +249,7 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
     private List<Explanation> analyzeAndRankExplanations(String query, List<Explanation> explanations) {
         // Sort by relevance score (descending)
         return explanations.stream()
-                .sorted((a, b) -> Double.compare(b.relevanceScore, a.relevanceScore))
+                .sorted((a, b) -> Double.compare(b.getRelevanceScore(), a.getRelevanceScore()))
                 .collect(Collectors.toList());
     }
 
@@ -325,12 +285,12 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
      */
     private boolean isSimilarToCluster(Explanation explanation, ExplanationCluster cluster) {
         // Simple similarity check based on content overlap
-        String explanationContent = explanation.content.toLowerCase();
+        String explanationContent = explanation.getContent().toLowerCase();
         String clusterContent = cluster.getRepresentativeContent().toLowerCase();
         
         // Calculate simple word overlap
-        Set<String> explanationWords = Set.of(explanationContent.split("\\s+"));
-        Set<String> clusterWords = Set.of(clusterContent.split("\\s+"));
+        Set<String> explanationWords = new HashSet<>(Arrays.asList(explanationContent.split("\\s+")));
+        Set<String> clusterWords = new HashSet<>(Arrays.asList(clusterContent.split("\\s+")));
         
         long commonWords = explanationWords.stream()
                 .filter(clusterWords::contains)
@@ -353,19 +313,25 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
         String explanationSummary = formatExplanationSummary(explanations, clusters);
         
         String prompt = String.format("""
-            Given the following user query (in any language):
-            "%s"
+            You need to answer a question about meeting minutes. The question asked was about counting and explaining meeting minutes that meet certain criteria.
             
             Found %d relevant meeting minutes:
             
             %s
             
-            Write a clear, direct answer in the same language as the query.
-            Provide only the information requested by the user.
+            Write a clear, direct answer in the same language as the user's question (detect from context).
+            CRITICAL RULES:
+            1. DO NOT repeat or echo the user's question in your response.
+            2. DO NOT start your answer with the question.
+            3. Answer directly with the count and explanations.
+            4. Example if the query is in English: "Found 5 meeting minutes. [explanations]" (NOT "The question was... Found 5...")
+            5. Example if the query is in Spanish: "Se encontraron 5 actas. [explicaciones]" (NOT "La pregunta era... Se encontraron 5...")
+            
+            Provide only the information requested.
             DO NOT mention any technical details like "clusters", "análisis", "analysis", "grouped into", or internal processing.
             DO NOT include phrases like "Basándonos en el análisis" or "Según los datos proporcionados".
-            Focus on answering the question naturally and concisely, as if you were a helpful assistant.
-            """, query, explanations.size(), 
+            Focus on answering naturally and concisely, as if you were a helpful assistant.
+            """, explanations.size(), 
             explanationSummary != null ? explanationSummary : "No information found.");
         
         try {
@@ -376,7 +342,8 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
                 return generateFallbackFinalAnswer(query, explanations);
             }
             
-            return response;
+            String cleaned = removeQuestionEcho(response.trim(), query);
+            return cleaned;
         } catch (Exception e) {
             log().error("Error generating enhanced final answer, using fallback", e);
             return generateFallbackFinalAnswer(query, explanations);
@@ -385,31 +352,80 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
     
     /**
      * Generates a fallback final answer when LLM fails.
-     * Detects language from query and responds accordingly.
      */
     private String generateFallbackFinalAnswer(String query, List<Explanation> explanations) {
-        String queryLower = query.toLowerCase();
-        boolean isSpanish = queryLower.matches(".*[áéíóúñ¿¡].*");
+        String explanationsText = explanations.stream()
+                .limit(3)
+                .map(e -> String.format("- %s: %s", 
+                    e.getDate() != null ? e.getDate() : "unknown date",
+                    e.getContent() != null && e.getContent().length() > 200 ? e.getContent().substring(0, 200) + "..." : (e.getContent() != null ? e.getContent() : "")))
+                .collect(Collectors.joining("\n\n"));
         
-        if (isSpanish) {
-            return String.format("Se encontraron %d acta(s) relevante(s).\n\nExplicaciones:\n%s",
-                               explanations.size(),
-                               explanations.stream()
-                                       .limit(3)
-                                       .map(e -> String.format("- %s: %s", 
-                                           e.date != null ? e.date : "fecha desconocida",
-                                           e.content.length() > 200 ? e.content.substring(0, 200) + "..." : e.content))
-                                       .collect(Collectors.joining("\n\n")));
-        } else {
-            return String.format("Found %d relevant minute(s).\n\nExplanations:\n%s",
-                               explanations.size(),
-                               explanations.stream()
-                                       .limit(3)
-                                       .map(e -> String.format("- %s: %s", 
-                                           e.date != null ? e.date : "unknown date",
-                                           e.content.length() > 200 ? e.content.substring(0, 200) + "..." : e.content))
-                                       .collect(Collectors.joining("\n\n")));
+        String prompt = String.format("""
+            The user asked (in any language): "%s"
+            
+            Found %d relevant meeting minutes with the following explanations:
+            
+            %s
+            
+            Respond with a short message in the EXACT SAME LANGUAGE as the question,
+            stating how many meeting minutes were found and summarizing the explanations.
+            Be concise and direct.
+            Do not repeat the question.
+            """, query, explanations.size(), explanationsText);
+        
+        try {
+            String response = getLLMResponseCached(prompt);
+            if (response != null && !response.trim().isEmpty()) {
+                return response.trim();
+            }
+        } catch (Exception e) {
+            log().warn("Error generating fallback final answer with LLM", e);
         }
+        
+        // Ultimate fallback
+        return String.format("Found %d relevant minute(s).\n\nExplanations:\n%s",
+                           explanations.size(), explanationsText);
+    }
+
+    /**
+     * Removes question echo from response using LLM.
+     * The LLM analyzes if the response repeats the question and extracts only the answer.
+     */
+    private String removeQuestionEcho(String response, String query) {
+        if (response == null || query == null || response.trim().isEmpty()) {
+            return response;
+        }
+        
+        // If response is very short, likely no echo
+        if (response.length() < 20) {
+            return response;
+        }
+        
+        String prompt = String.format("""
+            The user asked (in any language): "%s"
+            
+            The system generated this response: "%s"
+            
+            Task: If the response repeats or echoes the question, extract ONLY the actual answer part.
+            Remove any phrases like "the question was", "la pregunta era", "the user asked", etc.
+            Remove the question itself if it appears at the beginning.
+            
+            Return ONLY the cleaned answer, without any explanation or additional text.
+            If the response doesn't echo the question, return it as-is.
+            """, query, response);
+        
+        try {
+            String cleaned = getLLMResponseCached(prompt);
+            if (cleaned != null && !cleaned.trim().isEmpty()) {
+                return cleaned.trim();
+            }
+        } catch (Exception e) {
+            log().warn("Error removing question echo with LLM, returning original response", e);
+        }
+        
+        // Fallback: return original response
+        return response;
     }
 
     /**
@@ -423,34 +439,14 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
             ExplanationCluster cluster = clusters.get(i);
             Explanation representative = cluster.getRepresentativeExplanation();
             
-            if (representative.date != null) {
-                summary.append(String.format("Reunión del %s:\n", representative.date));
+            if (representative.getDate() != null) {
+                summary.append(String.format("Reunión del %s:\n", representative.getDate()));
             }
-            summary.append(representative.content);
+            summary.append(representative.getContent() != null ? representative.getContent() : "");
             summary.append("\n\n");
         }
         
         return summary.toString();
-    }
-
-    /**
-     * Formats cluster analysis for LLM prompt
-     */
-    private String formatClusterAnalysis(List<ExplanationCluster> clusters) {
-        if (clusters.isEmpty()) {
-            return "No clusters found.";
-        }
-        
-        StringBuilder analysis = new StringBuilder();
-        analysis.append(String.format("Total clusters: %d\n", clusters.size()));
-        
-        for (int i = 0; i < clusters.size(); i++) {
-            ExplanationCluster cluster = clusters.get(i);
-            analysis.append(String.format("- Cluster %d: %d explanations, avg relevance: %.2f\n", 
-                                        i + 1, cluster.getSize(), cluster.getAverageRelevance()));
-        }
-        
-        return analysis.toString();
     }
 
     /**
@@ -462,80 +458,4 @@ public class MetadataCountAndExplainTool extends AbstractMetadataTool {
         return super.getLLMResponseCached(prompt);
     }
 
-    /**
-     * Represents an explanation with metadata
-     */
-    private static class Explanation {
-        final String minuteId;
-        final String date;
-        final String place;
-        final String content;
-        final double relevanceScore;
-        final long timestamp;
-
-        Explanation(String minuteId, String date, String place, String content, double relevanceScore, long timestamp) {
-            this.minuteId = minuteId;
-            this.date = date;
-            this.place = place;
-            this.content = content;
-            this.relevanceScore = relevanceScore;
-            this.timestamp = timestamp;
-        }
-        
-        /**
-         * Gets a formatted identifier for the explanation
-         */
-        String getIdentifier() {
-            return String.format("%s (%s - %s)", minuteId, date != null ? date : "unknown", place != null ? place : "unknown");
-        }
-        
-        /**
-         * Gets the age of the explanation in milliseconds
-         */
-        long getAge() {
-            return System.currentTimeMillis() - timestamp;
-        }
-        
-        @Override
-        public String toString() {
-            return String.format("Explanation[%s, score=%.2f, age=%dms]", getIdentifier(), relevanceScore, getAge());
-        }
-    }
-
-    /**
-     * Represents a cluster of similar explanations
-     */
-    private static class ExplanationCluster {
-        private final List<Explanation> explanations = new ArrayList<>();
-
-        ExplanationCluster(Explanation initialExplanation) {
-            explanations.add(initialExplanation);
-        }
-
-        void addExplanation(Explanation explanation) {
-            explanations.add(explanation);
-        }
-
-        int getSize() {
-            return explanations.size();
-        }
-
-        Explanation getRepresentativeExplanation() {
-            // Return the explanation with highest relevance score
-            return explanations.stream()
-                    .max((a, b) -> Double.compare(a.relevanceScore, b.relevanceScore))
-                    .orElse(explanations.get(0));
-        }
-
-        String getRepresentativeContent() {
-            return getRepresentativeExplanation().content;
-        }
-
-        double getAverageRelevance() {
-            return explanations.stream()
-                    .mapToDouble(e -> e.relevanceScore)
-                    .average()
-                    .orElse(0.0);
-        }
-    }
 }
